public class Copy {
    private String id;
    private Book book;

    public Copy(String id, Book book) {
        this.id = id;
        this.book=book;
    }

    public String getId() {
        return id;
    }

    public void setId(String id) {
        this.id = id;
    }

    public Book getBook() {
        return book;
    }

    public void setBook(Book book) {
        this.book = book;
    }
}
